src/endpoint-configuration-service/src/test/resources/expectations/envoy/empty/cluster.yaml
resources:
  - "@type": type.googleapis.com/envoy.config.cluster.v3.Cluster
    name: passthrough-https
    type: ORIGINAL_DST
    connectTimeout: 10s
    lbPolicy: CLUSTER_PROVIDED
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
  - "@type": type.googleapis.com/envoy.config.cluster.v3.Cluster
    name: ext-authz
    type: STRICT_DNS
    connect_timeout: 10s
    lb_policy: ROUND_ROBIN
    respect_dns_ttl: true
    dns_refresh_rate: 30000
    load_assignment:
      cluster_name: ext-authz
      endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  protocol: TCP
                  address: auth-service
                  port_value: 7070
  - "@type": type.googleapis.com/envoy.config.cluster.v3.Cluster
    name: passthrough
    type: ORIGINAL_DST
    lbPolicy: CLUSTER_PROVIDED
    connectTimeout: 10s
    original_dst_lb_config:
      use_http_header: true
