src/endpoint-configuration-service/src/test/resources/expectations/envoy/empty/listener.yaml
resources:
  - "@type": type.googleapis.com/envoy.config.listener.v3.Listener
    name: envoy_listener
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 15001
    traffic_direction: OUTBOUND
    listener_filters:
      - name: tls_inspector
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
      - name: original_dst
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.listener.original_dst.v3.OriginalDst
    filter_chains:
      - name: https_chain
        filter_chain_match:
          transport_protocol: tls
        filters:
          - name: envoy.filters.network.tcp_proxy
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
              cluster: passthrough-https
              stat_prefix: https_passthrough
      - name: http_chain
        filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress_http
              codec_type: AUTO
              route_config:
                name: local_route
                virtual_hosts:
                  - name: allow_any
                    domains:
                      - "*"
                    routes:
                      - match:
                          prefix: "/"
                        route:
                          cluster: passthrough
              http_filters:
                - name: envoy.filters.http.router
